--- a/admin.html
+++ b/admin.html
@@ -36,7 +36,7 @@
         <h2>📂 Global PDF Inventory</h2>
         <div style="background: #f1f5f9; padding: 20px; border-radius: 15px; margin-bottom: 20px;">
             <h4>Register New Uploaded PDF</h4>
-            <input type="text" id="reg-id" placeholder="Exact File Name (e.g., science)">
+            <input type="text" id="reg-id" placeholder="File Name (e.g., science)">
             <input type="text" id="reg-title" placeholder="Display Title (e.g., Science Textbook)">
             <select id="reg-cat">
                 <option value="Systematic Theology">Systematic Theology</option>
@@ -48,7 +48,6 @@
             </select>
             <button class="btn-sm" style="background: var(--blue); color: white; width: 100%; padding: 12px;" onclick="registerPDF()">Save to Inventory</button>
         </div>
-
         <table>
             <thead><tr><th>PDF File</th><th>Category</th><th>Promotions</th><th>Action</th></tr></thead>
             <tbody id="inventory-list"></tbody>
