--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 </head>
 <body>
 
-<div id="dashboard">
+<div id="auth-screen" class="hidden">
+    <div class="glass-card" style="max-width:400px; margin:auto; text-align:center; margin-top:100px;">
+        <h2>Jesus is the Saviour</h2>
+        <p>Login to access the library</p>
+        <button class="btn-blue" style="width:100%; padding:15px;" onclick="signInWithGoogle()">Sign in with Google</button>
+    </div>
+</div>
+
+<div id="dashboard" class="hidden">
     <header style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
         <div><span style="color:var(--blue); font-weight:800; font-size:12px;">JESUS IS THE SAVIOUR</span><h1 style="margin:0;">Library</h1></div>
     </header>
@@ -37,7 +45,7 @@
     </div>
 
     <div id="lib-view">
-        <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search books, categories..." onkeyup="searchLib()">
+        <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search for books, authors, categories..." onkeyup="searchLib()">
 
         <div class="glass-card">
             <h3>🕒 Recent Uploads</h3>
@@ -65,9 +73,9 @@
     <div id="prof-view" class="hidden">
         <div class="glass-card">
             <h3>Student Profile</h3>
-            <p id="p-name"></p>
+            <p id="p-name">Loading...</p>
             <p id="p-email"></p>
-            <button class="btn-blue" style="background:red; margin-top:20px;" onclick="logout()">Logout</button>
+            <button class="btn-blue" style="background:red; margin-top:20px; width:100%;" onclick="logout()">Logout</button>
         </div>
     </div>
 
@@ -79,9 +87,9 @@
 </div>
 
 <div id="reader-overlay" class="hidden">
-    <div style="padding:15px; background:#1e293b; color:white; display:flex; justify-content:space-between;">
-        <span id="rtitle">Reading Preview</span>
-        <button onclick="document.getElementById('reader-overlay').classList.add('hidden')" style="background:red; color:white; border:none; padding:8px 15px; border-radius:8px;">Exit</button>
+    <div style="padding:15px; background:#1e293b; color:white; display:flex; justify-content:space-between; align-items:center;">
+        <span id="rtitle">Reading Mode</span>
+        <button onclick="document.getElementById('reader-overlay').classList.add('hidden')" style="background:red; color:white; border:none; padding:8px 15px; border-radius:8px; cursor:pointer;">Exit</button>
     </div>
     <iframe id="pdf-frame" src="" style="flex-grow:1; border:none;"></iframe>
 </div>
@@ -108,9 +116,14 @@
 
     auth.onAuthStateChanged(async user => {
         if(user) {
+            document.getElementById('auth-screen').classList.add('hidden');
+            document.getElementById('dashboard').classList.remove('hidden');
             document.getElementById('p-name').innerText = "Name: " + user.displayName;
             document.getElementById('p-email').innerText = "Email: " + user.email;
             db.collection("users").doc(user.uid).update({ lastActive: new Date().toISOString() });
+        } else {
+            document.getElementById('auth-screen').classList.remove('hidden');
+            document.getElementById('dashboard').classList.add('hidden');
         }
     });
 
@@ -160,6 +173,7 @@
         document.getElementById('reader-overlay').classList.remove('hidden');
     }
 
+    function signInWithGoogle() { auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }
     function logout() { auth.signOut().then(() => location.reload()); }
     function borrowFull(id) { if(prompt("Enter Code:") === "BORROW2026") alert("Full Book Access Granted!"); }
 </script>
