--- a/admin.html
+++ b/admin.html
@@ -36,8 +36,8 @@
         <h2>📂 Global PDF Inventory</h2>
         <div style="background: #f1f5f9; padding: 20px; border-radius: 15px; margin-bottom: 20px;">
             <h4>Register New Uploaded PDF</h4>
-            <input type="text" id="reg-id" placeholder="File Name (e.g., science)">
-            <input type="text" id="reg-title" placeholder="Display Title (e.g., Science Textbook)">
+            <input type="text" id="reg-id" placeholder="File Name (e.g., ST_Edward_J_Kilmartin...)">
+            <input type="text" id="reg-title" placeholder="Display Title">
             <select id="reg-cat">
                 <option value="Systematic Theology">Systematic Theology</option>
                 <option value="CHURCH History">CHURCH History</option>
@@ -59,14 +59,14 @@
             <h3>👥 Member Live Status</h3>
             <table id="memberTable">
                 <thead><tr><th>Status</th><th>Name</th><th>Email</th><th>Institution</th></tr></thead>
-                <tbody></tbody>
+                <tbody id="member-body"></tbody>
             </table>
         </div>
         <div class="card">
-            <h3>⏳ Student Activity & Returns</h3>
+            <h3>⏳ Student Activity Logs</h3>
             <table id="logTable">
-                <thead><tr><th>Student</th><th>Activity</th><th>Time</th></tr></thead>
-                <tbody></tbody>
+                <thead><tr><th>Student</th><th>Activity</th><th>Duration</th><th>Time</th></tr></thead>
+                <tbody id="log-body"></tbody>
             </table>
         </div>
     </div>
@@ -117,7 +117,7 @@
     });
 
     db.collection("users").onSnapshot(snap => {
-        const tbody = document.querySelector("#memberTable tbody");
+        const tbody = document.getElementById('member-body');
         tbody.innerHTML = "";
         snap.forEach(doc => {
             const u = doc.data();
@@ -130,11 +130,11 @@
     });
 
     db.collection("activity_logs").orderBy("timestamp", "desc").limit(15).onSnapshot(snap => {
-        const tbody = document.querySelector("#logTable tbody");
+        const tbody = document.getElementById('log-body');
         tbody.innerHTML = "";
         snap.forEach(doc => {
             const l = doc.data();
-            tbody.innerHTML += `<tr><td>${l.userName}</td><td>${l.activityType}</td><td>${new Date(l.timestamp).toLocaleString()}</td></tr>`;
+            tbody.innerHTML += `<tr><td>${l.userName}</td><td>${l.activityType}</td><td>${l.duration}</td><td>${new Date(l.timestamp).toLocaleString()}</td></tr>`;
         });
     });
 
@@ -145,7 +145,6 @@
             await db.collection("library_settings").doc(oldestDoc).update({ [cat]: false });
         }
         await db.collection("library_settings").doc(id).update({ [cat]: true, updatedAt: new Date().toISOString() });
-        alert("Updated!");
     }
 
     async function deleteBook(id) { if(confirm("Delete this?")) await db.collection("library_settings").doc(id).delete(); }
