--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         :root { --blue: #3b82f6; --bg: #f0f4f8; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); margin: 0; padding: 20px; color: #1e293b; }
         .glass-card { background: white; border-radius: 20px; padding: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); margin-bottom: 20px; }
+        .search-box { width: 100%; padding: 15px; border-radius: 15px; border: 2px solid #e2e8f0; margin-bottom: 20px; font-size: 16px; outline: none; box-sizing: border-box; }
         .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; }
         .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: #e2e8f0; }
         .tab-btn.active { background: var(--blue); color: white; }
+        .folder-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); gap: 15px; }
+        .folder { background: white; padding: 15px; border-radius: 20px; text-align: center; cursor: pointer; box-shadow: 0 4px 10px rgba(0,0,0,0.05); font-weight: 600; font-size: 13px; }
         .book-item { background: white; padding: 15px; border-radius: 12px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #f1f5f9; }
         .btn-blue { background: var(--blue); color: white; border: none; padding: 8px 15px; border-radius: 8px; cursor: pointer; font-weight: 600; font-size: 12px; }
         .hidden { display: none !important; }
@@ -25,8 +28,8 @@
 
 <div id="auth-screen">
     <div class="glass-card" style="max-width:400px; margin:auto; text-align:center; margin-top:100px;">
-        <h2 style="color:var(--blue)">Sign In</h2>
-        <button class="btn-blue" style="width:100%; padding:15px;" onclick="signInWithGoogle()">Google Login</button>
+        <h2 style="color:var(--blue)">Theological Library</h2>
+        <button class="btn-blue" style="width:100%; padding:15px;" onclick="signInWithGoogle()">Login with Google</button>
         <div id="reg-form" class="hidden" style="margin-top:20px;">
             <input type="text" id="inst" placeholder="Institution" style="width:100%; padding:10px; margin-bottom:10px;">
             <button class="btn-blue" onclick="saveReg()">Enter Library</button>
@@ -41,7 +44,20 @@
     </div>
 
     <div id="lib-view">
-        <div class="glass-card"><h3>📂 Categories</h3><div id="all-books-list"></div></div>
+        <input type="text" id="libSearch" class="search-box" placeholder="🔍 Search library..." onkeyup="searchLib()">
+        <div class="glass-card"><h3>🕒 Recent Uploads</h3><div id="recent-list"></div></div>
+        <div class="glass-card"><h3>🔥 Trending Now</h3><div id="trending-list"></div></div>
+        <div class="glass-card">
+            <h3>📂 Theological Categories</h3>
+            <div class="folder-grid">
+                <div class="folder" onclick="loadCat('Systematic Theology')">📖 Systematic Theology</div>
+                <div class="folder" onclick="loadCat('CHURCH History')">⛪ CHURCH History</div>
+                <div class="folder" onclick="loadCat('Mission')">🌍 Mission</div>
+                <div class="folder" onclick="loadCat('Acts of Apostles')">📜 Acts of Apostles</div>
+                <div class="folder" onclick="loadCat('Synoptic Gospel')">✝️ Synoptic Gospel</div>
+                <div class="folder" onclick="loadCat('Introduction to BIBLE')">📘 Intro to BIBLE</div>
+            </div>
+        </div>
     </div>
 
     <div id="prof-view" class="hidden">
@@ -50,15 +66,20 @@
             <p id="p-name"></p><button class="btn-blue" style="background:red" onclick="logout()">Logout</button>
         </div>
         <div class="glass-card">
-            <h3>📚 Borrowed Collection (7-Day Limit)</h3>
+            <h3>📚 Borrowed Collection (Fine Schedule)</h3>
             <div id="borrowed-list"></div>
         </div>
+    </div>
+
+    <div id="cat-view" class="hidden">
+        <button onclick="document.getElementById('cat-view').classList.add('hidden')" class="btn-blue" style="background:#64748b;">← Back</button>
+        <h3 id="cat-name"></h3><div id="cat-list"></div>
     </div>
 </div>
 
 <div id="reader-overlay" class="hidden">
     <div style="padding:15px; background:#1e293b; color:white; display:flex; justify-content:space-between;">
-        <span>Reading Mode</span>
+        <span>Reader Mode</span>
         <button onclick="document.getElementById('reader-overlay').classList.add('hidden')" style="background:red; color:white; border:none; padding:8px 15px; border-radius:8px;">Exit</button>
     </div>
     <iframe id="pdf-frame" src="" style="flex-grow:1; border:none;"></iframe>
@@ -86,8 +107,8 @@
                 document.getElementById('auth-screen').classList.add('hidden');
                 document.getElementById('dashboard').classList.remove('hidden');
                 document.getElementById('p-name').innerText = user.displayName;
-                loadBooks();
-                listenToBorrows(); //
+                loadLibraryData();
+                listenToBorrows();
             } else {
                 document.getElementById('reg-form').classList.remove('hidden');
             }
@@ -106,43 +127,76 @@
         }
     }
 
-    // REAL-TIME BORROW TRACKER WITH DEADLINES
     function listenToBorrows() {
         db.collection("borrows").where("userId", "==", currentUser.uid).onSnapshot(snap => {
             const list = document.getElementById('borrowed-list');
-            list.innerHTML = snap.empty ? "<p>No books borrowed.</p>" : "";
+            list.innerHTML = snap.empty ? "<p>No borrowed books.</p>" : "";
             
             snap.forEach(doc => {
                 const b = doc.data();
-                const diffTime = Math.abs(new Date() - new Date(b.borrowedAt));
-                const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+                const diffDays = Math.ceil(Math.abs(new Date() - new Date(b.borrowedAt)) / (1000 * 60 * 60 * 24));
                 
-                let status = "";
-                if(diffDays <= 1) status = `<small style="color:green">1 Day Used</small>`;
-                else if(diffDays <= 4) status = `<small style="color:orange">${diffDays} Days (Lock Pending)</small>`;
-                else if(diffDays <= 7) status = `<small style="color:red">${diffDays} Days (Urgent Return)</small>`;
-                else status = `<small style="color:darkred">EXPIRED</small>`;
+                let fineMsg = "";
+                if(diffDays <= 5) fineMsg = `<span style="color:green">${diffDays} Days (Free)</span>`;
+                else if(diffDays === 6) fineMsg = `<span style="color:green">6 Days (Free)</span>`;
+                else if(diffDays <= 9) fineMsg = `<span style="color:orange">${diffDays} Days (Fine: 10 RS)</span>`;
+                else if(diffDays <= 12) fineMsg = `<span style="color:red">${diffDays} Days (Fine: 25 RS)</span>`;
+                else fineMsg = `<span style="color:darkred">EXPIRED (Urgent Return)</span>`;
 
-                list.innerHTML += `
-                    <div class="book-item">
-                        <span><b>${b.title}</b><br>${status}</span>
-                        <div>
-                            <button class="btn-blue" onclick="openPdf('${b.bookId}', '')">Open</button>
-                            <button class="btn-blue" style="background:#ef4444" onclick="returnBook('${doc.id}', '${b.title}')">Return</button>
-                        </div>
-                    </div>`;
+                list.innerHTML += `<div class="book-item">
+                    <span><b>${b.title}</b><br>${fineMsg}</span>
+                    <div>
+                        <button class="btn-blue" onclick="openPdf('${b.bookId}', '')">Open</button>
+                        <button class="btn-blue" style="background:#ef4444" onclick="returnBook('${doc.id}', '${b.title}')">Return</button>
+                    </div>
+                </div>`;
             });
         });
     }
 
     async function returnBook(borrowId, title) {
         if(confirm(`Return ${title}?`)) {
-            await db.collection("activity_logs").add({
-                userName: currentUser.displayName, activityType: "Returned: " + title, timestamp: new Date().toISOString()
-            });
+            await db.collection("activity_logs").add({ userName: currentUser.displayName, activityType: "Returned: " + title, timestamp: new Date().toISOString() });
             await db.collection("borrows").doc(borrowId).delete();
-            alert("Returned!");
         }
+    }
+
+    function renderBook(id, title) {
+        return `<div class="book-item" data-title="${(title||'').toLowerCase()}">
+            <span><b>${title || id}</b></span>
+            <div>
+                <button class="btn-blue" onclick="openPdf('${id}', '_read_online')">Preview</button>
+                <button class="btn-blue" style="background:#eee; color:#1e293b;" onclick="borrowBook('${id}', '${title}')">Borrow</button>
+            </div>
+        </div>`;
+    }
+
+    function loadLibraryData() {
+        db.collection("library_settings").onSnapshot(snap => {
+            const rList = document.getElementById('recent-list'), tList = document.getElementById('trending-list');
+            rList.innerHTML = ""; tList.innerHTML = "";
+            snap.forEach(doc => { 
+                const b = doc.data();
+                if(b.recent) rList.innerHTML += renderBook(doc.id, b.title);
+                if(b.trending) tList.innerHTML += renderBook(doc.id, b.title);
+            });
+        });
+    }
+
+    async function loadCat(name) {
+        document.getElementById('cat-name').innerText = name;
+        document.getElementById('cat-view').classList.remove('hidden');
+        const snap = await db.collection("library_settings").where("category", "==", name).get();
+        const list = document.getElementById('cat-list');
+        list.innerHTML = "";
+        snap.forEach(doc => list.innerHTML += renderBook(doc.id, doc.data().title));
+    }
+
+    function searchLib() {
+        const q = document.getElementById('libSearch').value.toLowerCase();
+        document.querySelectorAll('#lib-view .book-item').forEach(el => {
+            el.style.display = el.dataset.title.includes(q) ? "flex" : "none";
+        });
     }
 
     function openPdf(id, s) {
@@ -154,22 +208,8 @@
         document.getElementById('lib-view').classList.toggle('hidden', t !== 'lib');
         document.getElementById('prof-view').classList.toggle('hidden', t !== 'prof');
     }
-
-    function signInWithGoogle() { 
-        const p = new firebase.auth.GoogleAuthProvider();
-        p.setCustomParameters({ prompt: 'select_account' });
-        auth.signInWithPopup(p); 
-    }
+    function signInWithGoogle() { const p = new firebase.auth.GoogleAuthProvider(); p.setCustomParameters({ prompt: 'select_account' }); auth.signInWithPopup(p); }
     function logout() { auth.signOut().then(() => location.reload()); }
-    async function loadBooks() {
-        const snap = await db.collection("library_settings").get();
-        const list = document.getElementById('all-books-list');
-        list.innerHTML = "";
-        snap.forEach(doc => {
-            const b = doc.data();
-            list.innerHTML += `<div class="book-item"><span><b>${b.title}</b></span><button class="btn-blue" onclick="borrowBook('${doc.id}', '${b.title}')">Borrow</button></div>`;
-        });
-    }
 </script>
 </body>
 </html>
