--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library Admin - Advanced Control</title>
+    <title>Library Admin - Master Control</title>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -11,22 +11,22 @@
     <style>
         :root { --blue: #3b82f6; --bg: #f8fafc; --card: #ffffff; }
         body { font-family: 'Poppins', sans-serif; background: var(--bg); padding: 20px; color: #1e293b; }
-        .card { background: var(--card); border-radius: 20px; padding: 25px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); margin-bottom: 25px; position: relative; }
+        .card { background: var(--card); border-radius: 20px; padding: 25px; box-shadow: 0 10px 25px rgba(0,0,0,0.05); margin-bottom: 25px; }
         .nav-tabs { display: flex; gap: 10px; margin-bottom: 20px; }
         .tab-btn { padding: 10px 20px; border-radius: 12px; border: none; cursor: pointer; font-weight: 600; background: #e2e8f0; }
         .tab-btn.active { background: var(--blue); color: white; }
         table { width: 100%; border-collapse: collapse; margin-top: 15px; }
         th { text-align: left; font-size: 11px; text-transform: uppercase; color: #64748b; padding: 10px; border-bottom: 2px solid #f1f5f9; }
         td { padding: 12px; border-bottom: 1px solid #f1f5f9; font-size: 13px; }
-        .btn-sm { padding: 6px 10px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; margin: 2px; display: inline-flex; align-items: center; gap: 5px; }
+        .btn-sm { padding: 6px 10px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; margin: 2px; display: inline-flex; align-items: center; gap: 5px; transition: 0.2s; }
         .search-box { width: 100%; padding: 12px; border-radius: 10px; border: 2px solid #e2e8f0; margin-bottom: 15px; outline: none; }
         
-        /* Dropdown Menus */
-        .dropdown-menu { display: none; position: absolute; background: white; border: 1px solid #ddd; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); z-index: 100; min-width: 180px; padding: 10px; }
-        .dropdown-item { padding: 8px; cursor: pointer; border-radius: 5px; font-size: 12px; }
+        /* Interactive Dropdowns */
+        .dropdown-menu { display: none; position: absolute; background: white; border: 1px solid #ddd; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.1); z-index: 100; min-width: 200px; padding: 10px; margin-top: 5px; }
+        .dropdown-item { padding: 8px 12px; cursor: pointer; border-radius: 6px; font-size: 12px; display: flex; justify-content: space-between; align-items: center; }
         .dropdown-item:hover { background: #f0f7ff; color: var(--blue); }
         .show { display: block; }
-        .faculty-search { width: 100%; padding: 5px; margin-bottom: 8px; font-size: 12px; border: 1px solid #eee; border-radius: 5px; }
+        .badge-active { font-size: 10px; background: #dcfce7; color: #166534; padding: 2px 6px; border-radius: 4px; }
         .hidden { display: none !important; }
     </style>
 </head>
@@ -39,16 +39,23 @@
 
     <div id="inv-section" class="card">
         <h2>📂 Global PDF Inventory</h2>
-        <input type="text" id="invSearch" class="search-box" placeholder="🔍 Search inventory..." onkeyup="filterInv()">
+        <input type="text" id="invSearch" class="search-box" placeholder="🔍 Search book titles or IDs..." onkeyup="filterInv()">
 
         <table>
-            <thead><tr><th>PDF File</th><th>Category</th><th>Assign / Recommend</th><th>Action</th></tr></thead>
+            <thead>
+                <tr>
+                    <th>PDF File</th>
+                    <th>Status / Category</th>
+                    <th>Manage Placements</th>
+                    <th>Inventory Action</th>
+                </tr>
+            </thead>
             <tbody id="inventory-list"></tbody>
         </table>
     </div>
 
     <div id="mem-section" class="hidden card">
-        <h3>👥 Member Live Status</h3>
+        <h3>👥 Faculty & Member Status</h3>
         <table id="memberTable">
             <thead><tr><th>Status</th><th>Name</th><th>Position</th><th>Email</th></tr></thead>
             <tbody id="member-body"></tbody>
@@ -77,40 +84,60 @@
         document.getElementById('t-mem').classList.toggle('active', t === 'mem');
     }
 
-    // Load Faculty Only
     db.collection("users").where("position", "==", "faculty").onSnapshot(snap => {
         facultyList = [];
         snap.forEach(doc => facultyList.push({ id: doc.id, name: doc.data().fullName }));
     });
 
-    // Render Inventory
     db.collection("library_settings").onSnapshot(snap => {
         const list = document.getElementById('inventory-list');
         list.innerHTML = "";
         snap.forEach(doc => {
             const b = doc.data();
+            const id = doc.id;
             list.innerHTML += `
-                <tr class="inv-item" data-name="${(b.title || '').toLowerCase()}">
-                    <td><b>${b.title || doc.id}</b></td>
-                    <td id="cat-cell-${doc.id}">${b.category || 'Unassigned'}</td>
+                <tr class="inv-item" data-name="${(b.title || id).toLowerCase()}">
+                    <td>
+                        <b>${b.title || id}</b><br>
+                        <small style="color:#64748b">${id}.pdf</small>
+                    </td>
+                    <td>
+                        <div style="font-size:11px;">
+                            ${b.category ? `📁 ${b.category}` : '⚪ Unassigned'}<br>
+                            ${b.recent ? '<span class="badge-active">Recent</span>' : ''} 
+                            ${b.trending ? '<span class="badge-active" style="background:#fef9c3;color:#854d0e">Trend</span>' : ''}
+                        </div>
+                    </td>
                     <td>
                         <div style="position:relative; display:inline-block;">
-                            <button class="btn-sm" style="background:#dcfce7" onclick="toggleMenu('cat-menu-${doc.id}')">➕ Category</button>
-                            <div id="cat-menu-${doc.id}" class="dropdown-menu">
-                                ${categories.map(c => `<div class="dropdown-item" onclick="updateCat('${doc.id}', '${c}')">${c}</div>`).join('')}
+                            <button class="btn-sm" style="background:#dcfce7" onclick="toggleMenu('cat-${id}')">📁 Category</button>
+                            <div id="cat-${id}" class="dropdown-menu">
+                                ${categories.map(c => `<div class="dropdown-item" onclick="updateField('${id}', 'category', '${c}')">${c}</div>`).join('')}
                             </div>
                         </div>
-                        <div style="position:relative; display:inline-block; margin-left:10px;">
-                            <button class="btn-sm" style="background:#f3e8ff" onclick="toggleMenu('rec-menu-${doc.id}')">⭐ Recommend</button>
-                            <div id="rec-menu-${doc.id}" class="dropdown-menu">
-                                <input type="text" class="faculty-search" placeholder="Search Faculty..." onkeyup="filterFaculty(this, '${doc.id}')">
-                                <div id="fac-list-${doc.id}">
-                                    ${facultyList.map(f => `<div class="dropdown-item" onclick="addRec('${doc.id}', '${f.name}')">${f.name}</div>`).join('')}
+
+                        <div style="position:relative; display:inline-block; margin-left:5px;">
+                            <button class="btn-sm" style="background:#fef9c3" onclick="toggleMenu('promo-${id}')">🔥 Promo</button>
+                            <div id="promo-${id}" class="dropdown-menu">
+                                <div class="dropdown-item" onclick="updateField('${id}', 'recent', ${!b.recent})">${b.recent ? '❌ Remove' : '✅ Add to'} Recent</div>
+                                <div class="dropdown-item" onclick="updateField('${id}', 'trending', ${!b.trending})">${b.trending ? '❌ Remove' : '✅ Add to'} Trending</div>
+                            </div>
+                        </div>
+
+                        <div style="position:relative; display:inline-block; margin-left:5px;">
+                            <button class="btn-sm" style="background:#f3e8ff" onclick="toggleMenu('rec-${id}')">⭐ Recommend</button>
+                            <div id="rec-${id}" class="dropdown-menu">
+                                <input type="text" class="search-box" style="padding:5px; font-size:11px;" placeholder="Search Faculty..." onkeyup="filterFaculty(this, '${id}')">
+                                <div id="fac-list-${id}">
+                                    ${facultyList.map(f => `<div class="dropdown-item" onclick="addRec('${id}', '${f.name}')">${f.name}</div>`).join('')}
                                 </div>
                             </div>
                         </div>
                     </td>
-                    <td><button class="btn-sm" style="background:#fee2e2" onclick="deleteBook('${doc.id}')">Delete</button></td>
+                    <td>
+                        <button class="btn-sm" style="background:#f1f5f9; color:#64748b" onclick="resetBook('${id}')">Reset All</button>
+                        <button class="btn-sm" style="background:#fee2e2; color:#ef4444" onclick="deleteBook('${id}')">Delete</button>
+                    </td>
                 </tr>`;
         });
     });
@@ -120,19 +147,31 @@
         document.getElementById(id).classList.toggle('show');
     }
 
-    async function updateCat(bookId, cat) {
-        await db.collection("library_settings").doc(bookId).update({ category: cat });
-        document.getElementById(`cat-menu-${bookId}`).classList.remove('show');
+    async function updateField(id, field, value) {
+        await db.collection("library_settings").doc(id).update({ [field]: value, updatedAt: new Date().toISOString() });
+        document.querySelectorAll('.dropdown-menu').forEach(m => m.classList.remove('show'));
+    }
+
+    async function resetBook(id) {
+        if(confirm("Clear all categories, promotions, and recommendations for this book?")) {
+            // Reset main settings
+            await db.collection("library_settings").doc(id).update({
+                category: firebase.firestore.FieldValue.delete(),
+                recent: false,
+                trending: false
+            });
+            // Clear recommendations for this book
+            const recs = await db.collection("recommendations").where("bookId", "==", id).get();
+            const batch = db.batch();
+            recs.forEach(doc => batch.delete(doc.ref));
+            await batch.commit();
+            alert("Book has been cleared from all sections.");
+        }
     }
 
     async function addRec(bookId, facultyName) {
-        await db.collection("recommendations").add({ 
-            bookId, 
-            facultyName, 
-            timestamp: new Date().toISOString() 
-        });
+        await db.collection("recommendations").add({ bookId, facultyName, timestamp: new Date().toISOString() });
         alert(`Recommended by ${facultyName}`);
-        document.getElementById(`rec-menu-${bookId}`).classList.remove('show');
     }
 
     function filterFaculty(input, bookId) {
@@ -150,11 +189,10 @@
         });
     }
 
-    async function deleteBook(id) { if(confirm("Delete this?")) await db.collection("library_settings").doc(id).delete(); }
+    async function deleteBook(id) { if(confirm("Delete this book entirely?")) await db.collection("library_settings").doc(id).delete(); }
     
-    // Close menus on outside click
-    window.onclick = function(event) {
-        if (!event.target.matches('.btn-sm')) {
+    window.onclick = function(e) {
+        if (!e.target.matches('.btn-sm') && !e.target.matches('.search-box')) {
             document.querySelectorAll('.dropdown-menu').forEach(m => m.classList.remove('show'));
         }
     }
